@@ -17,9 +17,11 @@ import com.turtlecoin.auctionservice.feign.dto.TurtleResponseDTO;
 import com.turtlecoin.auctionservice.domain.turtle.entity.Gender;
 import com.turtlecoin.auctionservice.domain.turtle.service.TurtleService;
 import com.turtlecoin.auctionservice.feign.MainClient;
+import com.turtlecoin.auctionservice.global.exception.AuctionNotFoundException;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.redis.core.RedisTemplate;
+import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
@@ -45,45 +47,41 @@ public class AuctionService {
     // 경매 등록
     @Transactional
     public Auction registerAuction(RegisterAuctionDTO registerAuctionDTO, List<MultipartFile> images) throws IOException {
-        List<AuctionPhoto> auctionPhotos = new ArrayList<>();
+        log.info("경매 등록 시작 - 사용자 ID: {}, 거북이 ID: {}", registerAuctionDTO.getUserId(), registerAuctionDTO.getTurtleId());
 
-        try {
-            log.info("이미지 업로드 시작");
-            // 이미지 업로드
-            auctionPhotos = uploadImages(images);
-            log.info("거북이 검증 시작");
-            // 사용자가 소유한 거북이인지 검증
-            validateUserOwnsTurtle(registerAuctionDTO.getUserId(), registerAuctionDTO.getTurtleId());
+        // 사용자가 소유한 거북이인지 검증
+        validateUserOwnsTurtle(registerAuctionDTO.getUserId(), registerAuctionDTO.getTurtleId());
 
-            // 거북이가 이미 올라간 거북이가 아닌지 검증하는 로직 추가
-            validateTurtleNotAlreadyRegistered(registerAuctionDTO.getTurtleId());
+        // 거북이가 이미 올라간 거북이가 아닌지 검증하는 로직 추가
+        validateTurtleNotAlreadyRegistered(registerAuctionDTO.getTurtleId());
 
-            log.info("거북이 정보 조회 및 DTO설정");
-            // 거북이 정보 조회 및 DTO에 설정
-            RegisterAuctionDTO updatedAuctionDTO = updateAuctionWithTurtleInfo(registerAuctionDTO);
-            log.info("경매 정보 저장");
-            // 경매 저장
-            return saveAuction(updatedAuctionDTO, auctionPhotos);
+        Auction auction = registerAuctionDTO.toEntity();
+        auctionRepository.save(auction);
 
-        } catch (IOException e) {
-            // 업로드 도중 실패 시 이미 업로드된 이미지 삭제
-            deleteUploadedImages(auctionPhotos);  // 예외 발생 시 이미지 삭제 처리
-            log.error("경매 등록 실패: {}", e.getMessage());
-            throw e;
+        if (images != null && !images.isEmpty()) {
+            List<AuctionPhoto> photos = uploadImages(images, auction);
+            auction.getAuctionPhotos().addAll(photos);
         }
+
+        return auctionRepository.save(auction);
     }
 
     // 이미지 업로드 처리 메서드
-    private List<AuctionPhoto> uploadImages(List<MultipartFile> images) throws IOException {
-        List<AuctionPhoto> auctionPhotos = new ArrayList<>();
-
-        if (images != null) {
-            for (MultipartFile multipartFile : images) {
-                String imagePath = imageUploadService.upload(multipartFile, "auctionImages");
-                auctionPhotos.add(AuctionPhoto.builder().imageAddress(imagePath).build());
-            }
-        }
-        return auctionPhotos;
+    private List<AuctionPhoto> uploadImages(List<MultipartFile> images, Auction auction) throws IOException {
+        return images.stream()
+                .map(image -> {
+                    try {
+                        String imagePath = imageUploadService.upload(image, "auctionImages");
+                        return AuctionPhoto.builder()
+                                .imageAddress(imagePath)
+                                .auction(auction)
+                                .build();
+                    } catch (IOException e) {
+                        log.error("이미지 업로드 실패 : {}", image.getOriginalFilename(), e);
+                        throw new RuntimeException(e);
+                    }
+                })
+                .toList();
     }
 
     // 사용자가 소유한 거북이인지 검증 메서드
@@ -101,7 +99,9 @@ public class AuctionService {
     }
 
     private void validateTurtleNotAlreadyRegistered (Long turtleId) {
+        log.info("이미 올라간 거북이 검증 시작");
         Boolean isRegistered = auctionRepository.existsByTurtleId(turtleId);
+        log.info("이미 올라간 거북이 검증 완료");
 
         if (isRegistered) {
             throw new IllegalArgumentException("이미 등록된 거북이는 등록할 수 없습니다.");
@@ -125,8 +125,10 @@ public class AuctionService {
     }
 
     // 경매 저장 처리 메서드
-    private Auction saveAuction(RegisterAuctionDTO registerAuctionDTO, List<AuctionPhoto> auctionPhotos) {
-        Auction auction = registerAuctionDTO.toEntity(auctionPhotos);
+    private Auction saveAuction(RegisterAuctionDTO registerAuctionDTO) {
+        Auction auction = registerAuctionDTO.toEntity();
+        log.info("auction: {}", auction);
+        log.info("빌더를 이용해서 저장 성공");
         return auctionRepository.save(auction);
     }
 
@@ -140,41 +142,14 @@ public class AuctionService {
     // 경매 ID로 경매 조회
     public AuctionResponseDTO getAuctionById(Long auctionId) {
         Auction auction = auctionRepository.findById(auctionId)
-                .orElseThrow(() -> new IllegalArgumentException("경매를 찾을 수 없습니다: " + auctionId));
+                .orElseThrow(() -> new AuctionNotFoundException("경매를 찾을 수 없습니다: " + auctionId));
 
         log.info("경매 ID로 경매 조회");
 
-        List<AuctionTagDTO> auctionTagDTOs = auction.getAuctionTags().stream()
-                .map(tag -> AuctionTagDTO.builder()
-                        .id(tag.getId())
-                        .tag(tag.getTag())
-                        .build())
-                .toList();
-
-        List<AuctionPhotoDTO> auctionPhotoDTOS = auction.getAuctionPhotos().stream()
-                .map(photo -> AuctionPhotoDTO.builder()
-                        .id(photo.getId())
-                        .imageAddress(photo.getImageAddress())
-                        .build())
-                .toList();
+        TurtleResponseDTO turtle = mainClient.getTurtle(auctionId);
 
         // 경매 정보를 빌더 패턴을 사용해 DTO로 변환
-        return AuctionResponseDTO.builder()
-                .id(auction.getId())
-                .turtleId(auction.getTurtleId())
-                .title(auction.getTitle())
-                .minBid(auction.getMinBid())
-                .nowBid(auction.getNowBid())
-                .winningBid(auction.getWinningBid())
-                .sellerId(auction.getUserId())
-                .buyerId(auction.getBuyerId())
-                .startTime(auction.getStartTime())
-                .endTime(auction.getEndTime())
-                .content(auction.getContent())
-                .progress(auction.getAuctionProgress().name())
-                .tags(auctionTagDTOs)
-                .images(auctionPhotoDTOS)
-                .build();
+        return AuctionResponseDTO.from(auction, turtle);
     }
 
     // 경매 필터링 후 조회
@@ -198,7 +173,7 @@ public class AuctionService {
 
         return queryFactory.selectFrom(auction)
                 .where(whereClause.and(auction.turtleId.in(
-                        filteredTurtles.stream().map(TurtleResponseDTO::getId).collect(Collectors.toList()))))
+                        filteredTurtles.stream().map(TurtleResponseDTO::getId).toList())))
                 .offset((page-1L) * 10)
                 .limit(10)
                 .fetch();
@@ -207,9 +182,10 @@ public class AuctionService {
 //    // 거북이 정보를 받아와서 경매정보를 DTO로 변환
 //    // 수정, 테스트 필요
     public AuctionResponseDTO convertToDTO(Auction auction) {
-        TurtleResponseDTO turtleInfo = turtleService.getTurtleInfo(auction.getTurtleId());
-
-        return AuctionResponseDTO.from(auction);
+        log.info("Turtle ID: {}", auction.getTurtleId());
+        TurtleResponseDTO turtleInfo = mainClient.getTurtle(auction.getTurtleId());
+        log.info("Turtle info retrieved: {}", turtleInfo);
+        return AuctionResponseDTO.from(auction, turtleInfo);
     }
 
     // 입찰 가격 갱신
